test: fix testAddTaskWithAndWithoutId in inMemoryTaskManagerTest